# congress-appropriations

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NEXT_STEPS.md  NOTICE  README.md
.github/workflows/: ci.yml  deploy-book.yml
book/: book.toml
book/cookbook/: README.md  cookbook.py  requirements.txt
book/src/: SUMMARY.md  index.md
data/: authorities.json  fas_reference.json
data/116-hr1158/: BILLS-116hr1158enr.txt  BILLS-116hr1158enr.xml  bill_meta.json  conversion.json  embeddings.json  extraction.json  metadata.json  tas_mapping.json  tokens.json  verification.json
data/116-hr133/: bill_meta.json  conversion.json  embeddings.json  metadata.json  tas_mapping.json  tokens.json  verification.json
data/116-hr1520/: BILLS-116hr1520enr.txt  BILLS-116hr1520enr.xml  bill_meta.json  conversion.json  embeddings.json  extraction.json  metadata.json  tokens.json  verification.json
data/116-hr1865/: BILLS-116hr1865enr.txt  BILLS-116hr1865enr.xml  bill_meta.json  conversion.json  embeddings.json  metadata.json  (+3 more)
docs/: ARCHITECTURE.md  FIELD_REFERENCE.md
scripts/: DOCUMENTATION_PLAN.md  check_advance_breakdown.py  convert_fast_book.py  raw_text_repair.py  ss_tas_check.py  tas_cross_link_demo.py  tas_deep_dive.py  tas_resolve_poc.py  test_attribution_gap.py  test_exemplar_classification.py  test_exemplar_failure_analysis.py  test_fy_aware_advance.py  test_jurisdiction_classification.py  test_real_quality_scores.py  test_xml_division_titles.py  validate_enrichment.py
src/: lib.rs  main.rs
tests/: cli_tests.rs
(+406 files in other folders)
