[package]
name = "congress-appropriations"
version = "4.0.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Download and analyze U.S. appropriations bills from Congress.gov"
repository = "https://github.com/cgorski/congress-appropriations"
homepage = "https://github.com/cgorski/congress-appropriations"
readme = "README.md"
keywords = ["congress", "appropriations", "federal-budget", "legislation", "government"]
categories = ["command-line-utilities", "parser-implementations"]
exclude = ["examples/*/vectors.bin"]

[lib]
name = "congress_appropriations"
path = "src/lib.rs"

[[bin]]
name = "congress-approp"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
futures = "0.3"
walkdir = "2.5"
comfy-table = "7.2"
csv = "1.4"
regex = "1"
roxmltree = "0.21"
ulid = "1.2"

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"
